--- a/notifico/views/public/templates/landing.html
+++ b/notifico/views/public/templates/landing.html
@@ -2,7 +2,7 @@
 
 {% block content_page %}
 
-<div class="lead-container d-flex w-100 mb-3 text-center">
+<div class="lead-container d-flex w-100 py-4 mb-3 text-center">
   <main class="mx-auto">
     <h1>{{ _("Notifico") }}</h1>
     <p>
@@ -28,29 +28,27 @@
   </main>
 </div>
 
-<div class="zebra-section">
-  <div class="container p-3">
-    <div class="row row-cols-1 row-cols-md-3">
-      <div class="col">
-        <h5>{{ _("100%% Open Source") }}</h5>
-        <p class="lead">
-          {{ _("Forever available under the MIT license.") }}
-        </p>
-      </div>
+<div class="container p-3">
+  <div class="row row-cols-1 row-cols-md-3">
+    <div class="col">
+      <h5>{{ _("100%% Open Source") }}</h5>
+      <p class="lead">
+        {{ _("Forever available under the MIT license.") }}
+      </p>
+    </div>
 
-      <div class="col">
-        <h5>{{ _("8+ million messages") }}</h5>
-        <p class="lead">
-          {{ _("Over 8 million messages delivered and counting.") }}
-        </p>
-      </div>
+    <div class="col">
+      <h5>{{ _("8+ million messages") }}</h5>
+      <p class="lead">
+        {{ _("Over 8 million messages delivered and counting.") }}
+      </p>
+    </div>
 
-      <div class="col">
-        <h5>{{ _("4000+ projects") }}</h5>
-        <p class="lead">
-          {{ _("Over 4000 projects, from NASA to CPython.") }}
-        </p>
-      </div>
+    <div class="col">
+      <h5>{{ _("4000+ projects") }}</h5>
+      <p class="lead">
+        {{ _("Over 4000 projects, from NASA to CPython.") }}
+      </p>
     </div>
   </div>
 </div>
