--- a/notifico/templates/layouts/main.html
+++ b/notifico/templates/layouts/main.html
@@ -3,7 +3,7 @@
 should flash messages. #}
 
 {% block content %}
-<div class="container mb-3 mt-3">
+<div class="container mb-2">
   <div class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="{{ url_for("public.landing") }}">
@@ -55,7 +55,7 @@ should flash messages. #}
   {% endwith %}
 </div>
 
-<div class="contents pb-3">
+<div class="contents">
   {% block content_page %}
   {% endblock content_page %}
 </div>
