--- a/notifico/templates/ui/components.html
+++ b/notifico/templates/ui/components.html
@@ -1,4 +1,17 @@
-{% if breadcrumbs %}
+{% macro page_header(breadcrumbs=None) %}
+<div class="ex-header">
+  <div class="container">
+    <h1 class="pb-3 mb-3">
+        {{ caller() }}
+    </h1>
+    {% if breadcrumbs %}
+        {{ crumbs(breadcrumbs) }}
+    {% endif %}
+  </div>
+</div>
+{% endmacro %}
+
+{% macro crumbs(breadcrumbs) %}
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
     {% for crumb, link in breadcrumbs %}
@@ -12,4 +25,4 @@
     {% endfor %}
     </ol>
 </nav>
-{% endif %}
+{% endmacro %}
