--- a/notifico/views/account/templates/login.html
+++ b/notifico/views/account/templates/login.html
@@ -1,12 +1,11 @@
 {% extends "layouts/main.html" %}
 {% import "ui/forms.html" as forms %}
+{% import "ui/components.html" as components %}
 
 {% block content_page %}
-<div class="ex-header mb-3">
-  <div class="container">
-    <h1>{{ _("Login") }}</h1>
-  </div>
-</div>
+{% call components.page_header(breadcrumbs) %}
+  {{ _("Login") }}
+{% endcall %}
 
 <div class="container">
   <form method="POST" action="{{ request.url }}">
