--- a/notifico/views/projects/templates/edit_project.html
+++ b/notifico/views/projects/templates/edit_project.html
@@ -1,12 +1,11 @@
 {% extends "layouts/main.html" %}
 {% import "ui/forms.html" as forms %}
+{% import "ui/components.html" as components %}
 
 {% block content_page %}
-<div class="ex-header mb-3">
-  <div class="container">
-    <h1>{{ _("Edit Project") }}</h1>
-  </div>
-</div>
+{% call components.page_header(breadcrumbs) %}
+  {{ _("Edit Project") }}
+{% endcall %}
 
 <div class="container">
   <div class="section-content">
