--- a/notifico/views/projects/templates/new_provider.html
+++ b/notifico/views/projects/templates/new_provider.html
@@ -1,15 +1,13 @@
 {% extends "layouts/main.html" %}
 {% import "ui/forms.html" as forms %}
+{% import "ui/components.html" as components %}
 
 {% block content_page %}
-<div class="ex-header mb-3">
-  <div class="container">
-    <h1>{{ _("New Provider") }}</h1>
-  </div>
-</div>
+{% call components.page_header(breadcrumbs) %}
+  {{ _("New Provider") }}
+{% endcall %}
 
 <div class="container">
-  {% include "ui/crumbs.html" %}
   <form method="POST">
     {{ form.hidden_tag() }}
     {% for field in form if field.widget.input_type != "hidden" %}
