Re-implemented editing providers.

--- a/notifico/views/projects/templates/choose_provider.html
+++ b/notifico/views/projects/templates/choose_provider.html
@@ -22,7 +22,7 @@
               <a class="btn btn-primary" href="{{ url_for('.new_provider',
                   u=user.username,
                   p=project.name,
-                  provider=provider.PROVIDER_ID) }}">
+                  provider_impl=provider.PROVIDER_ID) }}">
                 {{ _("Add") }}
               </a>
             </div>
