--- a/notifico/templates/projects/new.html
+++ b/notifico/templates/projects/new.html
@@ -17,7 +17,7 @@
       <button type="submit" class="btn btn-primary">
         {{ _("Create Project") }}
       </button>
-      <a href="{{ url_for('.dashboard', u=g.user.username) }}" class="btn btn-secondary">
+      <a href="{{ user.dashboard_url }}" class="btn btn-secondary">
         {{ _("Cancel") }}
       </a>
     </form>
