--- a/notifico/templates/providers/edit.html
+++ b/notifico/templates/providers/edit.html
@@ -15,7 +15,7 @@
     {% endfor %}
     <div class="form-actions">
       <button type="submit" class="btn btn-primary">
-        {{ _("Add") }}
+        {{ _("Save") }}
       </button>
     </div>
   </form>
