--- a/notifico/templates/projects/edit.html
+++ b/notifico/templates/projects/edit.html
@@ -9,7 +9,7 @@
 
 <div class="container">
   <div class="section-content">
-    <form class="form form-horizontal" method='POST' action="{{ request.url }}">
+    <form class="form form-horizontal" method="POST">
       {{ form.hidden_tag() }}
       {{ forms.render_field(form.name) }}
       {{ forms.render_field(form.website ) }}
