is_admin, Group, Permission, Limit models and views.

--- a/notifico/static/css/base.css
+++ b/notifico/static/css/base.css
@@ -43,3 +43,8 @@ body {
 .card-bite .list-group-item {
     background-color: var(--card-bite-bg);
 }
+
+.compact {
+    white-space: nowrap;
+    width: 1%;
+}
