Add require_permission decorator. Add has_permission, and include it in templates by default. Check for can_register on registration pages, links, buttons.

--- a/notifico/templates/admin/groups/list.html
+++ b/notifico/templates/admin/groups/list.html
@@ -21,7 +21,7 @@
         </em>
       </td>
       <td class="compact text-center">
-        0
+        {{ group.users.count() }}
       </td>
       <td class="compact px-3">
         <a class="btn btn-primary btn-sm" href="{{ group.edit_url }}">
