--- a/notifico/templates/layouts/main.html
+++ b/notifico/templates/layouts/main.html
@@ -9,7 +9,11 @@ should flash messages. #}
       <a class="navbar-brand" href="{{ url_for("public.landing") }}">
         {{ _("Notifico") }}
       </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+        data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -38,11 +42,13 @@ should flash messages. #}
               {{ _("Login") }}
             </a>
           </li>
+          {% if has_permission("can_register", login_required=False) %}
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for("users.register") }}">
               {{ _("Register") }}
             </a>
           </li>
+          {% endif %}
           {% endif %}
         </ul>
       </div>
